test/TestPhases/exportinference/invalid/constOfHiddenConst.blc
module exposes exposedConst, exposedArray 

const hiddenConst: int32 = 42

const exposedConst = hiddenConst

const exposedArray: [hiddenConst] int32 = {hiddenConst}

